2011-02-24  Matthew Delaney  <mdelaney@apple.com>

Reviewed by Simon Fraser.

        ImageBuffer::clip creates an image of the incorrect context in IOSurface case
        https://bugs.webkit.org/show_bug.cgi?id=55170

        * fast/canvas/2d.fillText.gradient.html: Added. Draws a large "I" with an all-green
        gradient over a previously red canvas. Checks if (75,75) pixel is green to make sure
        the bottom left base of the I was painted, and checks (25,25) to make sure the red
        background wasn't overwritten by the textFill.
2011-02-24  Matthew Delaney  <mdelaney@apple.com>

        Reviewed by Simon Fraser.

        ImageBuffer::clip creates an image of the incorrect context in IOSurface case
        https://bugs.webkit.org/show_bug.cgi?id=55170

        Test: fast/canvas/2d.fillText.gradient.html

        * platform/graphics/cg/ImageBufferCG.cpp: Clipping against ImageBuffer's context
        instead of ourself (the passed in context).


Canonical link: https://commits.webkit.org/69570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79651 268f45cc-cd09-0410-ab3c-d52691b4dbfc